--- a/index.html
+++ b/index.html
@@ -1141,6 +1141,23 @@
         const ChatDetailScreen = memo(({ eventId, events, usersById, currentUser, chatMessages, onSendMessage, onBack }) => {
             const event = useMemo(() => events.find(e => e.eventID === eventId), [events, eventId]);
 
+            const [keyboardHeight, setKeyboardHeight] = useState(0);
+            const mainContentRef = useRef(null);
+
+            useEffect(() => {
+                const updateKeyboardHeight = () => {
+                    const viewportHeight = window.visualViewport.height;
+                    const windowHeight = window.innerHeight;
+                    const calculatedKeyboardHeight = Math.max(0, windowHeight - viewportHeight);
+                    setKeyboardHeight(calculatedKeyboardHeight);
+                };
+
+                if (window.visualViewport) {
+                    window.visualViewport.addEventListener('resize', updateKeyboardHeight);
+                    return () => window.visualViewport.removeEventListener('resize', updateKeyboardHeight);
+                }
+            }, []);
+
             if (!event) {
                 useEffect(() => onBack(), [onBack]);
                 return null;
@@ -1156,7 +1173,7 @@
                         </button>
                         <h1 className="text-lg font-bold text-[#2E2E2E] truncate">{event.title}</h1>
                     </header>
-                    <main className="flex-grow flex flex-col p-4 space-y-4 overflow-hidden">
+                    <main ref={mainContentRef} className="flex-grow flex flex-col p-4 space-y-4 overflow-hidden" style={{ paddingBottom: `${16 + keyboardHeight}px` }}>
                         <p className="text-sm text-slate-500 break-words flex-shrink-0">{event.description}</p>
                         <div className="flex-shrink-0">
                              <div className="flex flex-wrap gap-2">
