--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                 "Storgatan, Göteborg", "Engelbrektsgatan, Göteborg", "Övre Husargatan, Göteborg",
                 "Östra Larmgatan, Göteborg", "Lilla Bommen, Göteborg", "Packhusplatsen, Göteborg",
                 "Norra Hamngatan, Göteborg", "Kaserntorget, Göteborg", "Hedbergsgatan, Göteborg",
-                "Kapellplatsen, Göteborg"
+                "Kapellplatsen, Göteborg","Stenugnsundsbaden, Stenugnsund"
             ];
 
             const handleLocationChange = (e) => {
