--- a/index.html
+++ b/index.html
@@ -351,13 +351,6 @@
                 }
             };
 
-            const handleKeyDown = (e) => {
-                if (e.key === 'Enter' && !e.shiftKey) {
-                    e.preventDefault();
-                    formRef.current.requestSubmit();
-                }
-            };
-
             return (
                 <div className="flex-grow flex flex-col overflow-hidden">
                     <div ref={chatContainerRef} className="flex-1 overflow-y-auto space-y-3 p-2">
@@ -390,7 +383,6 @@
                             ref={inputRef}
                             value={newMessage}
                             onChange={(e) => setNewMessage(e.target.value)}
-                            onKeyDown={handleKeyDown}
                             placeholder="Skriv ett meddelande..."
                             className="w-full p-3 pr-14 border border-slate-200/80 rounded-xl focus:outline-none focus:ring-2 focus:ring-salviagron bg-white resize-none"
                             rows="2"
@@ -1011,20 +1003,20 @@
                     <header className="p-4 border-b border-slate-200/50 bg-white/80 backdrop-blur-sm sticky top-0 z-10"><h1 className="text-3xl font-bold text-salviagron">Mina träffar</h1></header>
                     <main className="flex-grow overflow-y-auto p-4 space-y-6">
                          <div>
-                            <h2 className="text-xl font-bold text-[#2E2E2E] text-center mb-3 underline">På gång för mig ({categorizedEvents.upcomingJoined.length})</h2>
+                            <h2 className="text-lg font-bold text-[#2E2E2E] text-center mb-3 underline">På gång för mig ({categorizedEvents.upcomingJoined.length})</h2>
                             {categorizedEvents.upcomingJoined.length > 0 ? (
                                 <div className="space-y-4">{categorizedEvents.upcomingJoined.map(event => (<EventCard key={event.eventID} event={event} onNavigate={onNavigate} currentUser={currentUser} />))}</div>
                             ) : (<EmptyState icon={Icons.calendar} title="Inga kommande träffar" text="Gå med i en träff för att se den här." />)}
                         </div>
                          <div>
-                            <h2 className="text-xl font-bold text-[#2E2E2E] text-center mb-3 underline">Mina skapade träffar ({categorizedEvents.createdEvents.length})</h2>
+                            <h2 className="text-lg font-bold text-[#2E2E2E] text-center mb-3 underline">Mina skapade träffar ({categorizedEvents.createdEvents.length})</h2>
                             {categorizedEvents.createdEvents.length > 0 ? (
                                 <div className="space-y-4">{categorizedEvents.createdEvents.map(event => (<EventCard key={event.eventID} event={event} onNavigate={onNavigate} currentUser={currentUser} />))}</div>
                             ) : (<EmptyState icon={Icons.plus} title="Du har inte skapat något" text="Klicka på plus-knappen för att skapa din första träff." />)}
                         </div>
                          {categorizedEvents.pastJoined.length > 0 && (
                             <div>
-                                <h2 className="text-xl font-bold text-[#2E2E2E] text-center mb-3 underline">Tidigare träffar ({categorizedEvents.pastJoined.length})</h2>
+                                <h2 className="text-lg font-bold text-[#2E2E2E] text-center mb-3 underline">Tidigare träffar ({categorizedEvents.pastJoined.length})</h2>
                                 <div className="space-y-4 opacity-60">
                                     {categorizedEvents.pastJoined.map(event => (<EventCard key={event.eventID} event={event} onNavigate={onNavigate} currentUser={currentUser} />))}
                                 </div>
